--- a/readme
+++ b/readme
@@ -1,1 +1,5 @@
-http://www.linuxhowtos.org/C_C++/socket.htm
+
+exemplo pegado http://www.linuxhowtos.org/C_C++/socket.htm
+modo de usar
+1- iniciar ./server 123456
+2- iniciar ./client localhost 123456 doidjeira
